added browser caching

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecaster</title>
-    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="logo">
           <a href="index.html">
-            <img src="assets/logo.png" alt="Logo" />
+            <img src="logo.png" alt="Logo" />
           </a>
         </div>
         <nav>
@@ -46,7 +46,7 @@
     <div class="line1"></div>
 
     <div id="loader">
-      <img src="assets/loader.gif" alt="loader" />
+      <img src="loader.gif" alt="loader" />
     </div>
 
     <div class="line2"></div>
